--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Rishabh Roy",
   "license": "",
   "dependencies": {
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "sqlite3": "^5.0.8"
   }
